hphp/hack/test/typecheck/strict_value_equality/bad_prims.php.exp
File "bad_prims.php", line 16, characters 3-22:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_prims.php", line 10, characters 3-5:
  This is a num (int | float)
  File "bad_prims.php", line 7, characters 3-5:
  This is an int
File "bad_prims.php", line 17, characters 3-24:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_prims.php", line 7, characters 3-5:
  This is an int
  File "bad_prims.php", line 9, characters 3-7:
  This is a float
File "bad_prims.php", line 18, characters 3-25:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_prims.php", line 11, characters 3-6:
  This is a bool
  File "bad_prims.php", line 9, characters 3-7:
  This is a float
File "bad_prims.php", line 19, characters 3-26:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_prims.php", line 12, characters 3-6:
  This is null
  File "bad_prims.php", line 13, characters 3-8:
  This is a string
File "bad_prims.php", line 20, characters 3-25:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_prims.php", line 7, characters 3-5:
  This is an int
  File "bad_prims.php", line 13, characters 3-8:
  This is a string
File "bad_prims.php", line 21, characters 3-33:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_prims.php", line 8, characters 3-13:
  This is an int
  File "bad_prims.php", line 9, characters 3-7:
  This is a float
File "bad_prims.php", line 22, characters 3-27:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "bad_prims.php", line 10, characters 3-5:
  This is a num (int | float)
  File "bad_prims.php", line 14, characters 3-10:
  This is an array key (int | string)
